refactor: minor optimizations/cleanup